# tiny-data

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
src/: client.rs  download.rs  fetch.rs  lib.rs  main.rs
src/ml/: clip.rs  image.rs  ml.rs  mod.rs
tinydata/: clip.py  main.py
