[package]
name = "tiny-data"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A cli tool for building computer vision datasets."
repository = "https://github.com/nnethercott/tiny-data/tree/main"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
indicatif = "0.17"
futures = "0.3"
regex = "1.1"
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.86"
tokenizers = "0.19.1"
image = "0.25.1"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.5.1" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.5.1" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.5.1" }
hf-hub = "0.3.2"
