[package]
name = "tinydata"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A cli tool for building computer vision datasets."
repository = "https://github.com/nnethercott/tiny-data/tree/main"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
indicatif = "0.17"
futures = "0.3"
regex = "1.1"
clap = { version = "4.5.4", features = ["derive"] }
